--- a/index.html
+++ b/index.html
@@ -375,7 +375,68 @@
         </div>
       </div>
   </section>
+  <footer class="ft">
+    <div class="field">
+      <div class="ft__sup fl">
 
+        <div class="ft__lc">
+          <p class="ft__content">
+            © 2025 Realm, Inc. <br> All rights reserved
+          </p>
+        </div>
+
+        <div class="ft__rc fl">
+
+          <ul class="ft__nav-list">
+            <li class="ft__nav-item"><a href="">Company</a></li>
+            <li class="ft__nav-item"><a href="">About</a></li>
+            <li class="ft__nav-item"><a href="">Terms</a></li>
+            <li class="ft__nav-item"><a href="">Legal</a></li>
+            <li class="ft__nav-item"><a href="">Press</a></li>
+          </ul>
+
+          <ul class="ft__nav-list">
+            <li class="ft__nav-item"><a href="">Product</a></li>
+            <li class="ft__nav-item"><a href="">Platform</a></li>
+            <li class="ft__nav-item"><a href="">Interactions</a></li>
+            <li class="ft__nav-item"><a href="">SEO</a></li>
+          </ul>
+
+          <ul class="ft__nav-list">
+            <li class="ft__nav-item"><a href="">Resources</a></li>
+            <li class="ft__nav-item"><a href="">Webinars and ebooks</a></li>
+            <li class="ft__nav-item"><a href="">Blog</a></li>
+            <li class="ft__nav-item"><a href="">Customer stories</a></li>
+          </ul>
+
+        </div>
+
+      </div>
+
+
+      <div class="ft__sub fl">
+
+        <div class="ft__sub-info">
+          <p class="ft__sub-text">Your use of this site is subject to Terms of Service</p>
+        </div>
+
+        <div class="ft__sub-social">
+          <ul class="ft__social-list fl">
+            <li class="ft__social-item"><a href="#"> <img src="img/footer/Social-Media-Icons.png" alt="Social-Media-Icons" class="ft__social__icon"> </a></li>
+            <li class="ft__social-item"><a href="#"> <img src="img/footer/Social-Media-Icons-1.png" alt="Social-Media-Icons" class="ft__social__icon"> </a></li>
+            <li class="ft__social-item"><a href="#"> <img src="img/footer/Social-Media-Icons-2.png" alt="Social-Media-Icons" class="ft__social__icon"> </a></li>
+            <li class="ft__social-item"><a href="#"> <img src="img/footer/Social-Media-Icons-3.png" alt="Social-Media-Icons" class="ft__social__icon"> </a></li>
+          </ul>
+        </div>
+
+        <div class="ft__sub-links fl">
+          <p class="ft__sub-link">Security</p>
+          <p class="ft__sub-link">Privacy Policy</p>
+        </div>
+
+      </div>
+
+    </div>
 </body>
 
 </html>
